fix(notificationSettings) Fix notification overflow

--- a/app/styles/management/_notifications.scss
+++ b/app/styles/management/_notifications.scss
@@ -5,6 +5,7 @@
 position: relative;
 }
 .ActiveNotification, .PastNotification {
+    word-wrap: break-word;
     margin-bottom: 20px;
 }
 
